--- a/smacofAV/av.qmd
+++ b/smacofAV/av.qmd
@@ -25,6 +25,8 @@ format:
     link-citations: true
     documentclass: scrartcl
     number-sections: true
+toc: true
+toc-depth: 3
 editor: source
 papersize: letter
 graphics: true
@@ -34,7 +36,7 @@ abstract: We use an iteratively reweighted version of the smacof
   algorithm to minimize various robust multidimensional scaling 
   loss functions. Our results use a general theorem on sharp 
   quadratic majorization of @deleeuw_lange_A_09. We relate this
-  theorem to earlier results in robust statistics, localization
+  theorem to earlier results in robust statistics, location
   theory, and sparse recovery. Code in R is included. 
 ---
 
@@ -197,7 +199,7 @@ loss usually satisfies $d_k(X)=\delta_k$ for quite a few elements,
 which means that near convergence the algorithm will become unstable
 because the weights from \eqref{eq:wk1def} become very large. 
 
-A large number of somewhat ad-hoc solutions have been proposed to deal with the problem of zero residuals, both in the location analysis and in the statistical literature. @schlossmacher_73 is the first discussion of the majorization method in the statistical literature (for LAC+V linear regression). His proposal is to simply set a weight equal to zero if the corresponding residual is
+A large number of somewhat ad-hoc solutions have been proposed to deal with the problem of zero residuals, both in location analysis and in the statistical literature. @schlossmacher_73 is the first discussion of the majorization method in the statistical literature (for LAC+V linear regression). His proposal is to simply set a weight equal to zero if the corresponding residual is
 less than some small positive value $\epsilon$. A similar approach, also used in location analysis, is to cap the weights at some large positive value.
 In @heiser_88 all residuals smaller than this epsilon get a weight equal to the weighted average of all small residuals. @phillips_02 assume double-exponential
 errors in LAV regression and then concludes that the EM algorithm gives the 
@@ -317,14 +319,14 @@ It then recomputes the weights $w_k(X^{(k+1)})$ and goes to the smacof step agai
 The first, and perhaps most obvious, choice for smoothing the absolute
 value function is
 \begin{equation}
-f_c(x)=\sqrt{x^2 + c^2}.\label{eq:chardonnier}
+f_c(x)=\sqrt{x^2 + c^2}.\label{eq:charbonnier}
 \end{equation}
 This smoother was previously used by @deleeuw_E_18f in least absolute value regression and in @deleeuw_E_20b in what was called least squares absolute value regression.
 
 In the figure below we show the loss function for $c=1$ (black), $c=0.1$ (red),
 $c=0.01$ (blue), and $c=0.001$ (green).
 
-```{r charfig, fig.align = "center", echo = FALSE, fig.cap = "Chardonnier Loss", fig.dim = c(6, 6)}
+```{r charfig, fig.align = "center", echo = FALSE, fig.cap = "Charbonnier Loss", fig.dim = c(6, 6)}
 par(pty = "s")
 curve(sqrt(x^2 + 1), from = -3, to = 3, ylab = "f", ylim = c(0, 4))
 curve(sqrt(x^2 + 0.1), from = -3, to = 3, add = TRUE, col = "RED", ylab = "f", ylim = c(0, 4))
@@ -338,9 +340,9 @@ uniform convergence of $f_c$ to $|x|$.
 
 
 
-In the engineering literature \eqref{eq:chardonnier} is known as Charbonnier loss, after @charbonnier_blanc-feraud_aubert_barlaud_94, who were possibly
+In the engineering literature \eqref{eq:charbonnier} is known as Charbonnier loss, after @charbonnier_blanc-feraud_aubert_barlaud_94, who were possibly
 the first engineers to use it. x
-@ramirez_sanchez_kreinovich_argaez_14 argue \eqref{eq:chardonnier} is also the "most computationally efficient smooth approximation to $|x|$".
+@ramirez_sanchez_kreinovich_argaez_14 argue \eqref{eq:charbonnier} is also the "most computationally efficient smooth approximation to $|x|$".
 
 By l'Hôpital
 $$
@@ -358,13 +360,12 @@ Thus if $x$ is much smaller than $c$ loss is approximately a quadratic in $x$,
 and if $x$ is much larger than $c$ then loss is approximately the
 absolute value. 
 
-Loss function \eqref{eq:chardonnier} is infinitely many times differentiable. Its first
+Loss function \eqref{eq:charbonnier} is infinitely many times differentiable. Its first
 derivative is
 $$
 f'_c(x)=\frac{1}{\sqrt{x^2+c^2}}x,
 $$
 which converges, again in the sup-norm and uniformly, to the sign function if $c\rightarrow 0$. The IRLS weights are
-
 $$
 w_c(x)=\frac{1}{\sqrt{x^2+c^2}}
 $$
@@ -393,6 +394,15 @@ which is non-increasing for $q\leq 2$. Note that we do not assume that
 $q>0$, and consequently ... provides us with much more flexibility than
 Charbonnier loss ...
 
+Plots, $\ell_0$ loss
+
+$$
+f_c''(x)=(x^2 + c^2)^{-\frac12}-x^2(x^2 + c^2)^{-\frac32}\leq(x^2 + c^2)^{-\frac12}\leq c^{-1}.
+$$
+Thus
+$$
+f(x)\leq f(y)+f'(y)(x-y)+\frac{1}{2c}(x-y)^2=f(y)+\frac{1}{2c}(x-(y-cf'(y)))^2
+$$
 ## Barron Loss
 
 There are a large number of generalizations
@@ -451,7 +461,7 @@ c|x|-\frac12 c^2&\text{ otherwise}.
 $$
 
 
-Because ... Chardonnier loss is also known
+Because ... Charbonnier loss is also known
 as Pseudo-Huber loss.
 
 The Huber function is differentiable, although not twice diffentiable. Its derivative is
@@ -698,8 +708,17 @@ f(\delta_k-d_k(X))\leq f(\delta_k-d_k(Y))+f'(\delta_k-d_k(Y))(d_k(Y)-d_k(X))+\fr
 $$
 Minimize
 $$
-\left[d_k(X)-\{d_k(Y))-K^{-1}f'(\delta_k-d_k(Y))\}\right]^2
+\sum w_k\left[d_k(X)-\{d_k(X^{(k)})-K^{-1}f'(\delta_k-d_k(X^{(k)}))\}\right]^2
 $$
+$$
+f_c''(x)=(x^2 + c^2)^{-\frac12}-x^2(x^2 + c^2)^{-\frac32}\leq(x^2 + c^2)^{-\frac12}\leq c^{-1}.
+$$
+Thus
+$$
+f(x)\leq f(y)+f'(y)(x-y)+\frac{1}{2c}(x-y)^2=f(y)+\frac{1}{2c}(x-(y-cf'(y)))^2
+$$
+
+maybe log (ramsay)
 
 # Code
 
