--- a/smacofAV/av.qmd
+++ b/smacofAV/av.qmd
@@ -319,7 +319,7 @@ It then recomputes the weights $w_k(X^{(k+1)})$ and goes to the smacof step agai
 The first, and perhaps most obvious, choice for smoothing the absolute
 value function is
 \begin{equation}
-f_c(x)=\sqrt{x^2 + c^2}.\label{eq:charbonnier}
+f_c(x)=\sqrt{x^2 + c^2}.\label{eq:charf}
 \end{equation}
 This smoother was previously used by @deleeuw_E_18f in least absolute value regression and in @deleeuw_E_20b in what was called least squares absolute value regression.
 
@@ -340,9 +340,9 @@ uniform convergence of $f_c$ to $|x|$.
 
 
 
-In the engineering literature \eqref{eq:charbonnier} is known as Charbonnier loss, after @charbonnier_blanc-feraud_aubert_barlaud_94, who were possibly
+In the engineering literature \eqref{eq:charf} is known as Charbonnier loss, after @charbonnier_blanc-feraud_aubert_barlaud_94, who were possibly
 the first engineers to use it. x
-@ramirez_sanchez_kreinovich_argaez_14 argue \eqref{eq:charbonnier} is also the "most computationally efficient smooth approximation to $|x|$".
+@ramirez_sanchez_kreinovich_argaez_14 argue \eqref{eq:charf} is also the "most computationally efficient smooth approximation to $|x|$".
 
 By l'Hôpital
 $$
@@ -360,39 +360,43 @@ Thus if $x$ is much smaller than $c$ loss is approximately a quadratic in $x$,
 and if $x$ is much larger than $c$ then loss is approximately the
 absolute value. 
 
-Loss function \eqref{eq:charbonnier} is infinitely many times differentiable. Its first
-derivative is
-$$
-f'_c(x)=\frac{1}{\sqrt{x^2+c^2}}x,
-$$
+Loss function \eqref{eq:charf} is infinitely many times differentiable. Its first derivative is
+\begin{equation}
+f'_c(x)=\frac{1}{\sqrt{x^2+c^2}}x,\label{eq:charg}
+\end{equation}
 which converges, again in the sup-norm and uniformly, to the sign function if $c\rightarrow 0$. The IRLS weights are
-$$
-w_c(x)=\frac{1}{\sqrt{x^2+c^2}}
-$$
+\begin{equation}
+w_c(x)=\frac{1}{\sqrt{x^2+c^2}}\label{eq:charw}
+\end{equation}
 which is clearly a decreasing function of $x$ on $\mathbb{R}^+$.
-
-
-$$
-\sigma_c(X):=\sum w_k\sqrt{(\delta_k-d_k(X))^2+c^2}
-$$
-Now majorization using
-$$
-\omega(X,X^{(k)}):=\sum w_kw_c(\delta_k-d_k(X^{(k)})(\delta_k-d_k(X))^2
-$$
 
 ## Generalized Charbonnier Loss
 
-The loss function $(x^2+c^2)^\frac12$ smoothes $|x|$. IN the same generalized 
+The loss function $(x^2+c^2)^\frac12$ smoothes $|x|$. In the same way generalized 
 Charbonnier loss smoothes $\ell_p$ loss $|x|^q$.
-$$
-f_{c,q}(x):=(x^2+c^2)^{\frac12q}
-$$
-$$
-w_{c,q}(x)=q(x^2+c^2)^{\frac12q-1}
-$$
+\begin{equation}
+f_{c,q}(x):=(x^2+c^2)^{\frac12 q}\label{eq:gcharf}
+\end{equation}
+\begin{equation}
+w_{c,q}(x)=q(x^2+c^2)^{\frac12 q-1}\label{eq:gcharw}
+\end{equation}
 which is non-increasing for $q\leq 2$. Note that we do not assume that
-$q>0$, and consequently ... provides us with much more flexibility than
-Charbonnier loss ...
+$q>0$, and consequently \eqref{eq:gcharf} provides us with much more flexibility than Charbonnier loss \eqref{eq:charf}.
+
+
+
+
+```{r gcharfig, fig.align = "center", echo = FALSE, fig.cap = "Generalized Charbonnier Loss", fig.dim = c(6, 6)}
+par(pty = "s")
+curve((x^2 + 1) ^ (-5), from = -3, to = 3, ylab = "f", ylim = c(0, 1))
+curve((x^2 + 1) ^ (-1), from = -3, to = 3, add = TRUE, col = "RED", ylab = "f", ylim = c(0, 1))
+curve((x^2 + 1) ^ (-.5), from = -3, to = 3, add = TRUE, col = "BLUE", ylab = "f", ylim = c(0, 1))
+curve((x^2 + 1) ^ (-.1), from = -3, to = 3, add = TRUE, col = "GREEN", ylab = "f", ylim = c(0, 1))
+```
+
+In figure \ref{fig:gcharfig} we have plotted \eqref{eq:gcharf} for
+$c=1$ and $\alpha$  equal to $-5$ (black), $-1$ (red), $-.5$ (blue),
+and $-.1$ (green)
 
 Plots, $\ell_0$ loss
 
@@ -403,17 +407,22 @@ Thus
 $$
 f(x)\leq f(y)+f'(y)(x-y)+\frac{1}{2c}(x-y)^2=f(y)+\frac{1}{2c}(x-(y-cf'(y)))^2
 $$
+
 ## Barron Loss
 
 There are a large number of generalizations
-of these types of loss functions in the engineering community, and in their
-maze of conference publications. We will discuss the nice generalization in @barron_19. 
+of the power smoother types of loss functions in the engineering community, and in their maze of conference publications. We will discuss one nice generalization in @barron_19. 
 
-$$
-f_{\alpha,c}(x)=\frac{|\alpha-2|}{\alpha}\left(\left(\frac{(x/c)^2}{|\alpha-2|}+1\right)^{\alpha/2}-1\right)
-$$
-There are a number of interesting special cases of ... for various values of the
-parameters.
+\begin{equation}
+f_{\alpha,c}(x)=\frac{|\alpha-2|}{\alpha}\left(\left(\frac{(x/c)^2}{|\alpha-2|}+1\right)^{\alpha/2}-1\right).\label{eq:barron}
+\end{equation}
+
+>Here $\alpha\in\mathbb{R}$ is a shape parameter that controls the robust-ness of the loss and $c>0$ is a scale parameter that controls the size of the loss’s quadratic bowl near $x=0$.
+
+There are a number of interesting special cases of \eqref{eq:barron} by selecting various values of the parameters. For $\alpha=1$ it becomes Charbonnier loss,
+and for $\alpha=-2$ it is Geman-McLure loss.
+For $\alpha\rightarrow 2$ it becomes squared error loss, for $\alpha\rightarrow 0$ it becomes Cauchy loss, and for $\alpha\rightarrow-\infty$ it becomes Cauchy loss.
+
 
 
 
@@ -585,15 +594,22 @@ w(x)=\begin{cases}
 \end{cases}
 $$
 
-It is also clear that we can use any scale family of
-probability densities to define convolution smoothers. There is an infinite number of possible choices, with finite or infinite support, smooth or nonsmooth, using splines or wavelets, and so on.
+It is also clear that we can use any scale family of probability densities to define convolution smoothers. There is an infinite number of possible choices, with finite or infinite support, smooth or nonsmooth, using splines or wavelets, and so on.
 
 \sectionbreak
 
 # Downweighters
 
+redescending
 
 ## Tukey Loss
+
+$$
+f(x)=\begin{cases}\frac{c^2}{6}\left(1-\left(1-(x/c)^2\right)^2\right)&\text{ if } |x|\leq c,\\
+\frac{c^2}{6}&\text{ otherwise}.
+\end{cases}
+$$
+
 
 ## Welsch Loss
 
@@ -601,8 +617,17 @@ $$
 f(x)=1-\exp(-\{\frac{x}{c}\}^2)
 $$
 
+```{r welshfig, fig.align = "center", echo = FALSE, fig.cap = "Welsch Loss", fig.dim = c(6, 6)}
+par(pty = "s")
+fwelsch <- function(x, c) 1 - exp(-.5 * (x / c) ^ 2)
+curve(fwelsch(x, 2), from = -3, to = 3, ylab = "f", ylim = c(0, 1))
+curve(fwelsch(x, 1), from = -3, to = 3, add = TRUE, col = "RED", ylab = "f", ylim = c(0, 1))
+curve(fwelsch(x, .5), from = -3, to = 3, add = TRUE, col = "BLUE", ylab = "f", ylim = c(0, 1))
+curve(fwelsch(x, .1), from = -3, to = 3, add = TRUE, col = "GREEN", ylab = "f", ylim = c(0, 1))
+```
+
 $$
-f'(x)=\frac{2}{c^2}\exp(-\{\frac{x}{c}\}^2)x
+w(x)=\frac{2}{c^2}\exp(-\{\frac{x}{c}\}^2).
 $$
 
 ## Cauchy Loss
@@ -618,6 +643,12 @@ $$
 w(x)=\frac{1}{c^2}\frac{1}{\{\frac{x}{c}\}^2+1}
 $$
 which is non-increasing on $\mathbb{R}^+$.
+
+## Geman-McLure Loss
+
+$$
+f_c(x)=\frac{2(x/c)^2}{(x/c)^2+4}.
+$$
 
 \sectionbreak
 
