--- a/smacofAV/av.tex
+++ b/smacofAV/av.tex
@@ -273,7 +273,7 @@
 
 \title{Robust Least Squares Multidimensional Scaling}
 \author{Jan de Leeuw}
-\date{October 3, 2024}
+\date{October 4, 2024}
 
 \begin{document}
 \maketitle
@@ -430,7 +430,7 @@ loss function is convex while this is certainly not the case in robust
 MDS.
 
 We tend to agree with Aftab and Hartley
-(\citeproc{ref-aftab_hartley_15}{n.d.}).
+(\citeproc{ref-aftab_hartley_15}{2015}).
 
 \begin{quote}
 .. attempts to analyze this difficulty {[}caused by infinite weights of
@@ -583,7 +583,7 @@ loss function.
 
 The first, and perhaps most obvious, choice for smoothing the absolute
 value function is \begin{equation}
-f_c(x)=\sqrt{x^2 + c^2}.\label{eq:charbonnier}
+f_c(x)=\sqrt{x^2 + c^2}.\label{eq:charf}
 \end{equation} This smoother was previously used by De Leeuw
 (\citeproc{ref-deleeuw_E_18f}{2018}) in least absolute value regression
 and in De Leeuw (\citeproc{ref-deleeuw_E_20b}{2020}) in what was called
@@ -607,13 +607,13 @@ For \(c>0\) we have \(f_c(x)>|x|\). If \(c\rightarrow 0\) then
 \(\min_x|f_c(x)-|x||=c\) attained at \(x=0\), which implies uniform
 convergence of \(f_c\) to \(|x|\).
 
-In the engineering literature \eqref{eq:charbonnier} is known as
-Charbonnier loss, after Charbonnier et al.
+In the engineering literature \eqref{eq:charf} is known as Charbonnier
+loss, after Charbonnier et al.
 (\citeproc{ref-charbonnier_blanc-feraud_aubert_barlaud_94}{1994}), who
 were possibly the first engineers to use it. x Ramirez et al.
 (\citeproc{ref-ramirez_sanchez_kreinovich_argaez_14}{2014}) argue
-\eqref{eq:charbonnier} is also the ``most computationally efficient
-smooth approximation to \(|x|\)''.
+\eqref{eq:charf} is also the ``most computationally efficient smooth
+approximation to \(|x|\)''.
 
 By l'Hôpital \[
 \lim_{x\rightarrow 0}\frac{\sqrt{x^2+c^2}-c}{\frac12x^2}=1.
@@ -625,31 +625,42 @@ By l'Hôpital \[
 quadratic in \(x\), and if \(x\) is much larger than \(c\) then loss is
 approximately the absolute value.
 
-Loss function \eqref{eq:charbonnier} is infinitely many times
-differentiable. Its first derivative is \[
-f'_c(x)=\frac{1}{\sqrt{x^2+c^2}}x,
-\] which converges, again in the sup-norm and uniformly, to the sign
-function if \(c\rightarrow 0\). The IRLS weights are \[
-w_c(x)=\frac{1}{\sqrt{x^2+c^2}}
-\] which is clearly a decreasing function of \(x\) on \(\mathbb{R}^+\).
-
-\[
-\sigma_c(X):=\sum w_k\sqrt{(\delta_k-d_k(X))^2+c^2}
-\] Now majorization using \[
-\omega(X,X^{(k)}):=\sum w_kw_c(\delta_k-d_k(X^{(k)})(\delta_k-d_k(X))^2
-\]
+Loss function \eqref{eq:charf} is infinitely many times differentiable.
+Its first derivative is \begin{equation}
+f'_c(x)=\frac{1}{\sqrt{x^2+c^2}}x,\label{eq:charg}
+\end{equation} which converges, again in the sup-norm and uniformly, to
+the sign function if \(c\rightarrow 0\). The IRLS weights are
+\begin{equation}
+w_c(x)=\frac{1}{\sqrt{x^2+c^2}}\label{eq:charw}
+\end{equation} which is clearly a decreasing function of \(x\) on
+\(\mathbb{R}^+\).
 
 \subsection{Generalized Charbonnier
 Loss}\label{generalized-charbonnier-loss}
 
-The loss function \((x^2+c^2)^\frac12\) smoothes \(|x|\). IN the same
-generalized Charbonnier loss smoothes \(\ell_p\) loss \(|x|^q\). \[
-f_{c,q}(x):=(x^2+c^2)^{\frac12q}
-\] \[
-w_{c,q}(x)=q(x^2+c^2)^{\frac12q-1}
-\] which is non-increasing for \(q\leq 2\). Note that we do not assume
-that \(q>0\), and consequently \ldots{} provides us with much more
-flexibility than Charbonnier loss \ldots{}
+The loss function \((x^2+c^2)^\frac12\) smoothes \(|x|\). In the same
+way generalized Charbonnier loss smoothes \(\ell_p\) loss \(|x|^q\).
+\begin{equation}
+f_{c,q}(x):=(x^2+c^2)^{\frac12 q}\label{eq:gcharf}
+\end{equation} \begin{equation}
+w_{c,q}(x)=q(x^2+c^2)^{\frac12 q-1}\label{eq:gcharw}
+\end{equation} which is non-increasing for \(q\leq 2\). Note that we do
+not assume that \(q>0\), and consequently \eqref{eq:gcharf} provides us
+with much more flexibility than Charbonnier loss \eqref{eq:charf}.
+
+\begin{figure}[H]
+
+{\centering \includegraphics{av_files/figure-pdf/gcharfig-1.pdf}
+
+}
+
+\caption{Generalized Charbonnier Loss}
+
+\end{figure}%
+
+In figure \ref{fig:gcharfig} we have plotted \eqref{eq:gcharf} for
+\(c=1\) and \(\alpha\) equal to \(-5\) (black), \(-1\) (red), \(-.5\)
+(blue), and \(-.1\) (green)
 
 Plots, \(\ell_0\) loss
 
@@ -657,17 +668,31 @@ Plots, \(\ell_0\) loss
 f_c''(x)=(x^2 + c^2)^{-\frac12}-x^2(x^2 + c^2)^{-\frac32}\leq(x^2 + c^2)^{-\frac12}\leq c^{-1}.
 \] Thus \[
 f(x)\leq f(y)+f'(y)(x-y)+\frac{1}{2c}(x-y)^2=f(y)+\frac{1}{2c}(x-(y-cf'(y)))^2
-\] \#\# Barron Loss
+\]
 
-There are a large number of generalizations of these types of loss
-functions in the engineering community, and in their maze of conference
-publications. We will discuss the nice generalization in Barron
-(\citeproc{ref-barron_19}{2019}).
+\subsection{Barron Loss}\label{barron-loss}
 
-\[
-f_{\alpha,c}(x)=\frac{|\alpha-2|}{\alpha}\left(\left(\frac{(x/c)^2}{|\alpha-2|}+1\right)^{\alpha/2}-1\right)
-\] There are a number of interesting special cases of \ldots{} for
-various values of the parameters.
+There are a large number of generalizations of the power smoother types
+of loss functions in the engineering community, and in their maze of
+conference publications. We will discuss one nice generalization in
+Barron (\citeproc{ref-barron_19}{2019}).
+
+\begin{equation}
+f_{\alpha,c}(x)=\frac{|\alpha-2|}{\alpha}\left(\left(\frac{(x/c)^2}{|\alpha-2|}+1\right)^{\alpha/2}-1\right).\label{eq:barron}
+\end{equation}
+
+\begin{quote}
+Here \(\alpha\in\mathbb{R}\) is a shape parameter that controls the
+robust-ness of the loss and \(c>0\) is a scale parameter that controls
+the size of the loss's quadratic bowl near \(x=0\).
+\end{quote}
+
+There are a number of interesting special cases of \eqref{eq:barron} by
+selecting various values of the parameters. For \(\alpha=1\) it becomes
+Charbonnier loss, and for \(\alpha=-2\) it is Geman-McLure loss. For
+\(\alpha\rightarrow 2\) it becomes squared error loss, for
+\(\alpha\rightarrow 0\) it becomes Cauchy loss, and for
+\(\alpha\rightarrow-\infty\) it becomes Cauchy loss.
 
 \sectionbreak
 
@@ -831,7 +856,15 @@ nonsmooth, using splines or wavelets, and so on.
 
 \section{Downweighters}\label{downweighters}
 
+redescending
+
 \subsection{Tukey Loss}\label{tukey-loss}
+
+\[
+f(x)=\begin{cases}\frac{c^2}{6}\left(1-\left(1-(x/c)^2\right)^2\right)&\text{ if } |x|\leq c,\\
+\frac{c^2}{6}&\text{ otherwise}.
+\end{cases}
+\]
 
 \subsection{Welsch Loss}\label{welsch-loss}
 
@@ -839,8 +872,18 @@ nonsmooth, using splines or wavelets, and so on.
 f(x)=1-\exp(-\{\frac{x}{c}\}^2)
 \]
 
+\begin{figure}[H]
+
+{\centering \includegraphics{av_files/figure-pdf/welshfig-1.pdf}
+
+}
+
+\caption{Welsch Loss}
+
+\end{figure}%
+
 \[
-f'(x)=\frac{2}{c^2}\exp(-\{\frac{x}{c}\}^2)x
+w(x)=\frac{2}{c^2}\exp(-\{\frac{x}{c}\}^2).
 \]
 
 \subsection{Cauchy Loss}\label{cauchy-loss}
@@ -854,6 +897,12 @@ f'(x)=\frac{1}{c^2}x\frac{1}{\{\frac{x}{c}\}^2+1}
 \] \[
 w(x)=\frac{1}{c^2}\frac{1}{\{\frac{x}{c}\}^2+1}
 \] which is non-increasing on \(\mathbb{R}^+\).
+
+\subsection{Geman-McLure Loss}\label{geman-mclure-loss}
+
+\[
+f_c(x)=\frac{2(x/c)^2}{(x/c)^2+4}.
+\]
 
 \sectionbreak
 
@@ -1129,7 +1178,7 @@ functions.
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
 \bibitem[\citeproctext]{ref-aftab_hartley_15}
-Aftab, K., and R. Hartley. n.d. {``Convergence of Iteratively
+Aftab, K., and R. Hartley. 2015. {``Convergence of Iteratively
 Re-Weighted Least Squares to Robust m-Estimators.''} In \emph{2015 IEEE
 Winter Conference on Applications of Computer Vision,} 480--87.
 \url{https://doi.org/10.1109/WACV.2015.70}.
@@ -1183,7 +1232,7 @@ Smoothing}.''} \emph{Journal of Classification} 16: 225--54.
 
 \bibitem[\citeproctext]{ref-heiser_87}
 Heiser, W. J. 1987. {``{Correspondence Analysis with Least Absolute
-Residuals}.''} \emph{Computational Statistica and Data Analysis} 5:
+Residuals}.''} \emph{Computational Statistics and Data Analysis} 5:
 337--56.
 
 \bibitem[\citeproctext]{ref-heiser_88}
